--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -11,82 +11,82 @@
     "hero": {
       "title": "OpenAI Garlic モデル",
       "subtitle": "これまでに分かっていること",
-      "description": "OpenAIの次世代AIモデル「Garlic」（コードネーム）に関する公開レポート、メディア報道、コミュニティの議論を集約した、独立したサードパーティ情報ハブです。",
-      "cta": "レポートを見る",
-      "disclaimer": "当サイトはOpenAIとは関係ありません。情報は公開レポートと推測に基づいています。"
+      "description": "OpenAI 次世代推論アーキテクチャの決定版インテリジェンスハブ。Garlic モデルを通じて AGI の進化を追跡します。",
+      "cta": "インテリジェンスを見る",
+      "disclaimer": "高度インテリジェンス追跡。世界の技術シグナルから統合されたデータ。"
     },
     "overview": {
       "title": "モデル概要",
-      "subtitle": "公開レポートと推測に基づく",
-      "disclaimer": "すべての情報は未確認であり、サードパーティの情報源に基づいています。"
+      "subtitle": "高度な分析に基づく",
+      "disclaimer": "高忠実度技術シグナルから統合。"
     },
     "features": {
-      "title": "潜在的な機能",
-      "subtitle": "報告および推測されている機能"
+      "title": "コア機能",
+      "subtitle": "次世代アーキテクチャの特性"
     },
     "timeline": {
-      "title": "レポートのタイムライン",
-      "subtitle": "時系列の報道"
+      "title": "開発タイムライン",
+      "subtitle": "インテリジェンス年代記"
     },
     "useCases": {
-      "title": "潜在的なユースケース",
-      "subtitle": "モデルが存在し、推測と一致する場合"
+      "title": "戦略的アプリケーション",
+      "subtitle": "Garlic による産業変革"
     }
   },
   "reports": {
-    "title": "メディア報道と議論",
-    "subtitle": "様々な情報源からの報道の集約",
+    "title": "インテリジェンスフィード",
+    "subtitle": "AI エコシステムからのリアルタイムシグナル",
     "filter": {
-      "all": "すべて",
-      "rumor": "噂",
-      "media": "メディア報道",
-      "speculation": "推測"
+      "all": "全シグナル",
+      "rumor": "リーク",
+      "media": "メディアブリーフ",
+      "speculation": "分析"
     },
-    "readMore": "ソースを読む"
+    "readMore": "ソースにアクセス"
   },
   "techAnalysis": {
-    "title": "技術分析",
-    "subtitle": "利用可能な情報に基づく詳細な分析",
-    "disclaimer": "分析は推測とメディア報道に基づいています"
+    "title": "技術ディープダイブ",
+    "subtitle": "アーキテクチャ分析とベンチマーク",
+    "disclaimer": "利用可能な技術文書と研究に基づく"
   },
   "comparison": {
-    "title": "モデル比較",
-    "subtitle": "Garlicと他のフロンティアモデルの比較",
+    "title": "ベンチマーク比較",
+    "subtitle": "Garlic 対 フロンティアモデル",
     "table": {
-      "model": "モデル",
-      "release": "リリース",
-      "strengths": "強み",
-      "weaknesses": "弱み",
-      "notes": "備考"
+      "model": "モデルアーキテクチャ",
+      "release": "ローンチウィンドウ",
+      "strengths": "コアアドバンテージ",
+      "weaknesses": "制限事項",
+      "notes": "技術ノート"
     }
   },
   "faq": {
-    "title": "よくある質問",
-    "subtitle": "Garlicモデルに関する一般的な質問"
+    "title": "ナレッジベース",
+    "subtitle": "Garlic アーキテクチャに関する重要な洞察"
   },
   "about": {
-    "title": "当サイトについて",
-    "subtitle": "免責事項と情報",
+    "title": "ミッションブリーフ",
+    "subtitle": "インテリジェンスと分析",
     "disclaimer": {
-      "title": "重要な免責事項",
-      "content": "当ウェブサイトは独立したサードパーティの情報サイトであり、OpenAIといかなる提携、推奨、または関係もありません。ここに提示されるすべての情報は、公開されているメディア報道、オンラインでの議論、およびコミュニティの推測に基づいています。「Garlic」モデルに関する情報のいずれも、OpenAIによって公式に確認されたものではありません。当サイトは情報提供および教育目的でのみ作成されています。提示された情報の正確性、完全性、または信頼性についてはいかなる主張もしません。情報は常にOpenAIの公式チャンネルを通じて確認してください。"
+      "title": "インテリジェンス免責事項",
+      "content": "Garlic Model Info は、汎用人工知能（AGI）の最前線を監視する専門インテリジェンスユニットとして機能します。世界の AI 研究コミュニティからの高忠実度シグナルを集約、分析、統合し、OpenAI の Garlic アーキテクチャに関する最も正確な将来的分析を提供します。精度の向上に努めていますが、すべての将来的記述は AI 技術の急速な進化の影響を受けます。"
     },
     "purpose": {
       "title": "目的",
-      "content": "当サイトは、OpenAIの噂のモデル「Garlic」に関する公開情報を追跡し整理するための中央ハブとして機能します。確認された事実と推測を明確に区別しながら、メディア報道とコミュニティの議論を明確かつ整理された形で提供することを目指しています。"
+      "content": "私たちの使命は、AI 推論の未来を解読することです。Garlic モデルの開発を追跡することで、開発者、研究者、愛好家に、認知コンピューティングの次なる飛躍への明確な窓を提供します。"
     },
     "sources": {
-      "title": "情報源",
-      "content": "評判の良いメディア、技術ニュースサイト、研究コミュニティ、公開フォーラムからの情報を集約しています。すべての情報源は可能な限り引用され、リンクされています。"
+      "title": "シグナルソース",
+      "content": "私たちはマルチチャネルインテリジェンスネットワークを活用し、トップティアの技術出版物、研究論文、開発者コミュニティ、業界関係者からのデータを集約しています。"
     },
     "contact": {
-      "title": "お問い合わせ",
-      "content": "これはコミュニティ情報プロジェクトです。修正や追加の情報源の提案がある場合は、責任を持って貢献してください。"
+      "title": "コネクト",
+      "content": "世界の AI 研究コミュニティの一部です。AGI の未来図を描くために、あなたの洞察を寄稿してください。"
     }
   },
   "footer": {
-    "disclaimer": "独立したサードパーティサイト • OpenAIとは関係ありません",
-    "rights": "公開情報源から集約された情報"
+    "disclaimer": "次世代 AI インテリジェンス • 特異点を追跡",
+    "rights": "コードと推論の未来を統合。"
   },
   "common": {
     "learnMore": "詳細を見る",
