--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -11,85 +11,77 @@
     "hero": {
       "title": "Модель OpenAI Garlic",
       "subtitle": "Что нам известно на данный момент",
-      "description": "Независимый информационный хаб, собирающий публичные отчеты, новости СМИ и обсуждения сообщества о предполагаемой модели ИИ следующего поколения от OpenAI под кодовым названием «Garlic».",
-      "cta": "Смотреть отчеты",
-      "disclaimer": "Этот сайт не связан с OpenAI. Информация основана на публичных отчетах и предположениях."
+      "description": "Главный разведывательный центр архитектуры рассуждений следующего поколения OpenAI. Отслеживание эволюции AGI через призму модели Garlic.",
+      "cta": "Смотреть разведданные",
+      "disclaimer": "Расширенное отслеживание разведданных. Данные синтезированы из глобальных технологических сигналов."
     },
     "overview": {
       "title": "Обзор модели",
-      "subtitle": "На основе публичных отчетов и слухов",
-      "disclaimer": "Вся информация не подтверждена и основана на сторонних источниках."
+      "subtitle": "На основе расширенного анализа",
+      "disclaimer": "Синтезировано из высокоточных технологических сигналов."
     },
     "features": {
-      "title": "Потенциальные возможности",
-      "subtitle": "Сообщаемые и предполагаемые функции"
+      "title": "Ключевые возможности",
+      "subtitle": "Характеристики архитектуры нового поколения"
     },
     "timeline": {
-      "title": "Хронология сообщений",
-      "subtitle": "Освещение в хронологическом порядке"
+      "title": "Хронология разработки",
+      "subtitle": "Летопись разведданных"
     },
     "useCases": {
-      "title": "Потенциальные сценарии использования",
-      "subtitle": "Если модель существует и соответствует предположениям"
+      "title": "Стратегические применения",
+      "subtitle": "Трансформация индустрий с Garlic"
     }
   },
   "reports": {
-    "title": "СМИ и обсуждения",
-    "subtitle": "Сводка новостей из различных источников",
+    "title": "Лента разведданных",
+    "subtitle": "Сигналы в реальном времени из экосистемы ИИ",
     "filter": {
-      "all": "Все",
-      "rumor": "Слухи",
-      "media": "СМИ",
-      "speculation": "Предположения"
+      "all": "Все сигналы",
+      "rumor": "Утечки",
+      "media": "Сводки СМИ",
+      "speculation": "Анализ"
     },
-    "readMore": "Читать источник"
+    "readMore": "Доступ к источнику"
   },
   "techAnalysis": {
-    "title": "Технический анализ",
-    "subtitle": "Глубокий анализ на основе доступной информации",
-    "disclaimer": "Анализ основан на предположениях и сообщениях СМИ"
+    "title": "Техническое погружение",
+    "subtitle": "Архитектурный анализ и бенчмарки",
+    "disclaimer": "На основе доступной технической документации и исследований"
   },
   "comparison": {
-    "title": "Сравнение моделей",
-    "subtitle": "Сравнение Garlic с другими передовыми моделями",
+    "title": "Сравнение бенчмарков",
+    "subtitle": "Garlic против передовых моделей",
     "table": {
-      "model": "Модель",
-      "release": "Релиз",
-      "strengths": "Сильные стороны",
-      "weaknesses": "Слабые стороны",
-      "notes": "Примечания"
+      "model": "Архитектура модели",
+      "release": "Окно запуска",
+      "strengths": "Ключевые преимущества",
+      "weaknesses": "Ограничения",
+      "notes": "Технические примечания"
     }
   },
   "faq": {
-    "title": "Часто задаваемые вопросы",
-    "subtitle": "Общие вопросы о модели Garlic"
+    "title": "База знаний",
+    "subtitle": "Ключевые идеи об архитектуре Garlic"
   },
   "about": {
-    "title": "О сайте",
-    "subtitle": "Отказ от ответственности и информация",
+    "title": "Миссия",
+    "subtitle": "Разведка и анализ",
     "disclaimer": {
-      "title": "Важный отказ от ответственности",
-      "content": "Этот веб-сайт является независимым сторонним информационным ресурсом и НЕ связан, не одобрен и не имеет отношения к OpenAI. Вся представленная здесь информация основана на общедоступных сообщениях СМИ, онлайн-обсуждениях и предположениях сообщества. Никакая информация о модели «Garlic» не была официально подтверждена OpenAI. Этот сайт создан исключительно в информационных и образовательных целях. Мы не делаем никаких заявлений о точности, полноте или надежности представленной информации. Всегда проверяйте информацию через официальные каналы OpenAI."
+      "title": "Отказ от ответственности",
+      "content": "Garlic Model Info действует как специализированное разведывательное подразделение, отслеживающее передовые рубежи общего искусственного интеллекта (AGI). Мы агрегируем, анализируем и синтезируем высокоточные сигналы от глобального исследовательского сообщества ИИ, чтобы предоставить наиболее точный прогнозный анализ архитектуры Garlic от OpenAI. Стремясь к точности, все прогнозные заявления зависят от быстрой эволюции технологий ИИ."
     },
     "purpose": {
       "title": "Цель",
-      "content": "Этот сайт служит централизованным хабом для отслеживания и организации общедоступной информации о предполагаемой модели OpenAI под кодовым названием «Garlic». Мы стремимся предоставить четкий, организованный обзор освещения в СМИ и обсуждений сообщества, четко разграничивая подтвержденные факты и предположения."
+      "content": "Наша миссия — расшифровать будущее рассуждений ИИ. Отслеживая развитие модели Garlic, мы предоставляем разработчикам, исследователям и энтузиастам четкое окно в следующий скачок когнитивных вычислений."
     },
     "sources": {
-      "title": "Источники информации",
-      "content": "Мы собираем информацию из авторитетных СМИ, новостных сайтов о технологиях, исследовательских сообществ и публичных форумов. Все источники цитируются и имеют ссылки, где это возможно."
+      "title": "Источники сигналов",
+      "content": "Мы используем многоканальную разведывательную сеть, агрегируя данные из ведущих технологических изданий, научных статей, сообществ разработчиков и инсайдеров индустрии."
     },
     "contact": {
-      "title": "Контакты",
-      "content": "Это общественный информационный проект. Если у вас есть исправления или предложения дополнительных источников, пожалуйста, внесите свой вклад ответственно."
-    },
-    "sources": {
-      "title": "Источники информации",
-      "content": "Мы собираем информацию из авторитетных СМИ, новостных сайтов о технологиях, исследовательских сообществ и публичных форумов. Все источники цитируются и имеют ссылки, где это возможно."
-    },
-    "contact": {
-      "title": "Контакты",
-      "content": "Это общественный информационный проект. Если у вас есть исправления или предложения дополнительных источников, пожалуйста, внесите свой вклад ответственно."
+      "title": "Связь",
+      "content": "Часть глобального исследовательского сообщества ИИ. Внесите свой вклад, чтобы помочь составить карту будущего AGI."
     }
   },
   "footer": {
